--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,7 +104,7 @@ target_compile_features(project_options INTERFACE cxx_std_${CMAKE_CXX_STANDARD})
 # configure files based on CMake configuration options
 add_subdirectory(configured_files)
 
-# Adding the src:
+add_subdirectory(lib)
 add_subdirectory(src)
 
 # Adding the tests:
