setting up the projet structure

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,7 +1,4 @@
-set(LIBRARY_TARGET_NAME LibWaveFunctionCollapse)
-
-find_package(fmt CONFIG)
-find_package(spdlog CONFIG)
+set(LIBRARY_TARGET_NAME LibWaveFunctionCollapseCpp)
 
 set(SOURCE_FILES "WaveFunctionCollapse.cpp")
 
@@ -10,6 +7,9 @@ add_library(${LIBRARY_TARGET_NAME} ${SOURCE_FILES})
 add_library(${PROJECT_NAME}::${LIBRARY_TARGET_NAME} ALIAS ${LIBRARY_TARGET_NAME})
 
 target_include_directories(${LIBRARY_TARGET_NAME} INTERFACE "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>")
+
+find_package(fmt CONFIG)
+find_package(spdlog CONFIG)
 
 target_link_libraries(
   ${LIBRARY_TARGET_NAME}
