disabling warning as errors in the CI for now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,11 @@ set(ENABLE_DEVELOPER_MODE
     CACHE BOOL "Enable 'developer mode'")
 
 # Change this to false if you want to disable warnings_as_errors in developer mode
-set(OPT_WARNINGS_AS_ERRORS_DEVELOPER_DEFAULT TRUE)
+if(MSVC)
+    set(WARNINGS_AS_ERRORS_DEVELOPER_DEFAULT TRUE)
+else()
+    set(WARNINGS_AS_ERRORS_DEVELOPER_DEFAULT FALSE)
+endif()
 
 # Add project_options v0.17.0
 # https://github.com/cpp-best-practices/project_options
